# DiscordSMPbot

./: .dockerignore  .gitignore  Dockerfile  README.md  admin.py  chat.py  keep_alive.py  listeners.py  main.py  minecraft.py  objects.py  pyproject.toml  requirements.txt  rest_utils.py  vars.txt
cogs/: admin.py  admincommands.py  chat.py  listeners.py  minecraft.py
storedVariables/: backup.txt  servers.json  vars.txt
